Fix z-index order

--- a/src/loquiz/menu/menu.component.scss
+++ b/src/loquiz/menu/menu.component.scss
@@ -1,7 +1,7 @@
 @import "/src/styles/variables.scss";
 
 .menu {
-  z-index: 42;
+  z-index: 2;
   position: fixed;
   height: 100%;
 
